--- a/Proyecto-Final-CV.html
+++ b/Proyecto-Final-CV.html
@@ -28,21 +28,18 @@
                 <div class="card-body2">
 
                     <img id="mlphoto" src="images/perfilm.png" class="img-fluid" alt="FPerfil">
+                    <span id="nombre"><b>MATIAS LUCIANO LOVERA</b></span>
                     <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left">
                         <div class="row">
-                            <span><b id="nombre">MATIAS LUCIANO LOVERA</b></span>
-                            <div class="col-lg-8">
-                                <ul>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Email: m*****@gmail.com</strong>
+                            <div class="col-lg-10">
+                                    <li id="datos"><i class="bi bi-chevron-right"></i> <strong>Email: m*****@gmail.com</strong>
                                     </li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Linkedin: m*****-l*****-22*2*6*11*</strong>
+                                    <li id="datos"><i class="bi bi-chevron-right"></i> <strong>Linkedin: m*****-l*****-22*2*6*11*</strong>
                                     </li>
-                                    <li><i class="bi bi-chevron-right"></i>
-                                        <strong>GitHub: MithozNoN</strong>
+                                    <li id="datos"><i class="bi bi-chevron-right"></i> <strong>GitHub: MithozNoN</strong>
                                     </li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Ciudad: Mendoza, Argentina</strong>
+                                    <li id="datos"><i class="bi bi-chevron-right"></i> <strong>Ciudad: Mendoza, Argentina</strong>
                                     </li>
-                                </ul>
                             </div>
                         </div>
                     </div>
@@ -54,27 +51,37 @@
                 <ul class="nav nav-pills">
                     <li class="nav-item">
                         <a class="nav-link" href="#scrollspyHeading1">
-                            Perfil
+                            <b>
+                                Perfil
+                            </b>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#scrollspyHeading2">
-                            Habilidades
+                            <b>
+                                Habilidades
+                            </b>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#scrollspyHeading3">
-                            Experiencia
+                            <b>
+                                Educación
+                            </b>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#scrollspyHeading4">
-                            Educación
+                            <b>
+                                Experiencia
+                            </b>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#scrollspyHeading5">
-                            Contácteme
+                            <b>
+                                Contácteme
+                            </b>
                         </a>
                     </li>
                 </ul>
@@ -326,7 +333,6 @@
                                     <div id="itemCar" class="carousel-item active">
                                         <center><img src="images/c++.png" class="d-block w-75" alt="..."></center>
                                     </div>
-                                    <br>
                                     <div id="itemCar" class="carousel-item">
                                         <center><img src="images/java.png" class="d-block w-75" alt="..."></center>
                                     </div>
@@ -335,6 +341,21 @@
                                     </div>
                                     <div id="itemCar" class="carousel-item">
                                         <center><img src="images/ingles.png" class="d-block w-75" alt="..."></center>
+                                    </div>
+                                    <div id="itemCar" class="carousel-item">
+                                        <center><img src="images/PPJava.jpg" class="d-block w-75" alt="..."></center>
+                                    </div>
+                                    <div id="itemCar" class="carousel-item">
+                                        <center><img src="images/Javapoo.jpg" class="d-block w-75" alt="..."></center>
+                                    </div>
+                                    <div id="itemCar" class="carousel-item">
+                                        <center><img src="images/JavaDB.jpg" class="d-block w-75" alt="..."></center>
+                                    </div>
+                                    <div id="itemCar" class="carousel-item">
+                                        <center><img src="images/JavaSB.jpg" class="d-block w-75" alt="..."></center>
+                                    </div>
+                                    <div id="itemCar" class="carousel-item">
+                                        <center><img src="images/JavaSB2.jpg" class="d-block w-75" alt="..."></center>
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -372,22 +393,22 @@
                             <div class="col-md-6">
                                 <form method="get" class="my-form">
                                     <div class="form-group">
-                                        <label for="form-name">Nombre</label>
+                                        <label for="form-name"><b>Nombre</b></label>
                                         <input type="text" class="form-control" placeholder="Ingrese su nombre"
                                             id="nombretxt">
                                     </div>
                                     <div class="form-group">
-                                        <label for="form-email">Dirección de E-Mail</label>
+                                        <label for="form-email"><b>Dirección de E-Mail</b></label>
                                         <input type="email" class="form-control" id="form-email"
                                             placeholder="Ingrese dirección de E-mail" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="form-subject">Telefono</label>
+                                        <label for="form-subject"><b>Telefono</b></label>
                                         <input type="number" class="form-control" id="form-subject"
                                             placeholder="Ingrese numero de telefono" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="form-message">Mensaje</label>
+                                        <label for="form-message"><b>Mensaje</b></label>
                                         <textarea class="form-control" id="form-message"
                                             placeholder="Ingrese su mensaje aquí" required></textarea>
                                     </div>
